# intensicare

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  HANDOFF.yaml  Makefile  PROJECT_STATUS.md  README.md  _check_config.py  _fix_config.py  alembic.ini  check_hl7apy.py  check_hl7apy2.py  check_hl7apy3.py  check_hl7apy4.py  check_hl7apy5.py  coverage.xml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  smoke_test_mllp.py  verify_fhir.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_migration.py  0002_add_users_table.py  33909c9d8845_add_sofa_lab_columns_to_vital_sign.py
docs/: implementation-plan.md  review-queue.md
docs/analysis/: audit-report-2026-06-26.md  technical-review-2026.md
docs/api/: overview.md
docs/architecture/adr/: ADR-001-amh-data-platform-consumer.md
docs/clinical/: alert-catalog.md
docs/data/: model.md
docs/product/: personas.md  vision.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: AlertPanel.tsx  BedCard.tsx  BedGrid.tsx  LoginForm.tsx  PatientDetail.tsx  ScoreTrendChart.tsx  VitalsChart.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/types/: index.ts
scripts/: run-tests.sh  verify.py
src/intensicare/: __init__.py  auth.py  config.py  main.py  mllp_listener.py  schemas.py
src/intensicare/api/: __init__.py  patients.py  thresholds.py  vitals.py
src/intensicare/api/v1/: __init__.py  alerts.py  auth.py  dashboard.py
src/intensicare/auth/: __init__.py  dependencies.py  jwt.py
src/intensicare/core/: __init__.py  database.py  redis.py  websocket.py
src/intensicare/fhir/: __init__.py  client.py
src/intensicare/models/: __init__.py  alert.py  clinical_score.py  patient_cache.py  threshold_config.py  user.py  vital_sign.py
src/intensicare/schemas/: __init__.py  dashboard.py  patients.py  thresholds.py  vitals.py
src/intensicare/services/: __init__.py  alert_engine.py  dashboard.py  mews.py  news2.py  patients.py  qsofa.py  sofa.py  vitals.py
tests/: __init__.py  conftest.py  test_alert_engine.py  test_alerts.py  test_auth.py  test_fhir.py  test_main.py  test_mews.py  test_mllp_listener.py  test_news2.py  test_qsofa.py  test_sofa.py  test_thresholds.py  test_vitals.py  test_websocket.py
